// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuDropdownItem renders correctly with name and icon 1`] = `
<div>
  <div
    class="text-white-mode1 flex cursor-pointer items-center gap-[5px] text-sm font-medium whitespace-nowrap"
  >
    <div
      class="flex-shrink-0"
    >
      <span>
        Icon
      </span>
    </div>
    Test Item
  </div>
</div>
`;

exports[`MenuDropdownItem renders correctly without an icon 1`] = `
<div>
  <div
    class="text-white-mode1 flex cursor-pointer items-center gap-[5px] text-sm font-medium whitespace-nowrap"
  >
    Test Item
  </div>
</div>
`;
